--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
     <string name="user_bio">Singer songwritter from Tokyo</string>
     <string name="_750">750</string>
     <string name="posts">Posts</string>
-    <string name="following">following</string>
+    <string name="following">Following</string>
     <string name="_339">339</string>
     <string name="followers">followers</string>
     <string name="_675k">675K</string>
@@ -65,4 +65,9 @@
     <string name="done">Done</string>
     <string name="male">Male</string>
     <string name="female">Female</string>
+    <string name="cancel">Cancel</string>
+    <string name="block">Block</string>
+    <string name="report">report</string>
+    <string name="about">about</string>
+    <string name="more">more</string>
 </resources>
