--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,5 +81,8 @@
     <string name="comment">Comment</string>
     <string name="new_notification">New</string>
     <string name="early_notification">Early</string>
+    <string name="camera">Camera</string>
+    <string name="remove_your_current_picture">Remove your current picture</string>
+    <string name="choose_from_library">Choose from library</string>
 
 </resources>
