--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,5 +84,6 @@
     <string name="camera">Camera</string>
     <string name="remove_your_current_picture">Remove your current picture</string>
     <string name="choose_from_library">Choose from library</string>
+    <string name="set_default_profile_picture">Set default profile picture</string>
 
 </resources>
